# project-management-tool

./: .gitignore  .replit  Pasted--Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can--1730744806677.txt  Pasted-INFO-database-connection-Executing-query-SELECT-FROM-projects-ORDER-BY-created-at-DESC-INFO-data-1730741859125.txt  Pasted-INFO-database-connection-First-row-sample-RealDictRow-id-2-name-Projet-2-descripti-1730741680539.txt  Pasted-INFO-database-connection-Query-executed-successfully-no-results-INFO-database-connection-Database-1730730832978.txt  Pasted-INFO-database-connection-Query-executed-successfully-no-results-INFO-database-connection-Database-1730730974754.txt  Pasted-INFO-database-connection-Query-parameters-2-Done-INFO-database-connection-Query-returned-0-ro-1730731210970.txt  Pasted-Uncaught-runtime-errors-ERROR-users-map-is-not-a-function-TypeError-users-map-is-not-a-funct-1730978442707.txt  Pasted-You-can-now-view-your-Streamlit-app-in-your-browser-URL-http-0-0-0-0-5000-INFO-database--1730744065118.txt  main.py  package-lock.json  package.json  pyproject.toml  replit.nix
.streamlit/: config.toml
auth/: auth_handler.py
backend/: server.js
components/: analytics.py  auth_forms.py  board_templates.py  board_view.py  project_form.py  task_form.py  task_list.py  team_management.py  timeline_view.py
database/: connection.py  migrate.py  migrate_assignee.py  migrate_dependencies.py  migrate_fix_deletion_order.py  migrate_init_dependencies.py  migrate_performance.py  migrate_rename_description.py  migrate_tasks.py  (+4 more)
(+46 files in other folders)
