[project]
name = "repl-nix-taskflowmanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.0",
    "jwt",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-jose",
    "python-json-logger>=2.0.7",
    "python-jwt",
    "python-magic",
    "python-multipart>=0.0.17",
    "streamlit>=1.39.0",
    "uuid>=0.4.27",
]
